Updated EMail sending mechanism - Soham

--- a/footerPages/startup.html
+++ b/footerPages/startup.html
@@ -268,7 +268,7 @@
 
                                 <div class="footer-form" >
                                     
-                                    <form action="../php/mail.php" class="ajax-form">
+                                    <form action="http://formspree.io/contact.qwixpert@gmail.com" class="" method="post">
                                         <div class="form-group">
                                             <input type="email" name="email" class="form-control" placeholder="E-mail" required>
                                         </div>
